ARMTemplates/VirtualMachine/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the storage account"
            }
        },
        "tags": {
            "type": "object"
        },
        "virtual_network_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "adminUser": {
            "type": "string"
        },
        "adminPassword": {
            "type": "string"
        }
    },
    "functions": [],
    "variables": {
        "virtual_network_addressspace": ["192.168.0.0/24"],
        "subnet_name": "sample-snet",
        "subnet_addressspace": "192.168.0.0/25",
        "network_security_group": "sample-nsg",
        "public_ip": "sample-pubip",
        "network_interface": "sample-nic"
    },
    "resources": [
        {
            "name": "[parameters('storage_account_name')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-01-01",
            "tags": "[parameters('tags')]",
            "location": "[resourceGroup().location]",
            "kind": "StorageV2",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            }
        },
        {
            "name": "[parameters('virtual_network_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-04-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('network_security_group'))]"
            ],
            "tags": "[parameters('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('virtual_network_addressspace')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_addressspace')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('network_security_group'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('network_security_group')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-04-01",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('tags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP_Allow",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP_Allow",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('public_ip')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-04-01",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "sampledns"
                }
            }
        },
        {
            "name": "[variables('network_interface')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-04-01",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtual_network_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtual_network_name'), variables('subnet_name'))]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('virtual_machine_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storage_account_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('network_interface'))]"
            ],
            "tags": "[parameters('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B2s"
                },
                "osProfile": {
                    "computerName": "[parameters('virtual_machine_name')]",
                    "adminUsername": "[parameters('adminUser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),'-osdisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('network_interface'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('storage_account_name'))).primaryEndpoints.blob]"
                    }
                }
            }
        }
    ],
    "outputs": {
      "storage_account_endpoints": {
        "type": "object",
        "value": "[reference(parameters('storage_account_name')).primaryEndpoints]"
      }
    }
}
